Utils + Repositories Test
100% branch coverage in repositories and utils functions